--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,16 @@
 
 @layer utilities {
     .bg-polka {
-        --dot-color:rgba(0, 0, 0, 0.05);
+        --dot-color:rgba(0, 0, 0, 0.1);
         --dot-space:30px;
         --dot-size:1px;
         background-image:radial-gradient(var(--dot-color) var(--dot-size), transparent var(--dot-size)),
         radial-gradient(var(--dot-color) var(--dot-size), transparent var(--dot-size));
         background-size:var(--dot-space) var(--dot-space);
         background-position:0 0, calc(var(--dot-space) / 2) calc(var(--dot-space) / 2);
+    }
+
+    .dark .bg-polka {
+        --dot-color:rgba(255, 255, 255, 0.05);
     }
 }
