카테고리 추가, 상단 읽음%용 bar추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,6 +137,10 @@
     @apply bg-background text-foreground;
   }
 
+  ul {
+    @apply list-disc list-inside !pl-0;
+  }
+
   .x\:container {
     @apply !max-w-[700px];
   }
