--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -138,7 +138,26 @@
   }
 
   ul {
-    @apply list-disc list-inside !pl-0;
+    @apply list-disc list-outside;
+    padding-left: 1.5em;
+  }
+
+  ol {
+    @apply list-decimal list-outside;
+    padding-left: 1.5em;
+  }
+
+  /* 리스트 아이템의 줄바꿈 후 들여쓰기 정렬 */
+  li {
+    padding-left: 0.5em;
+  }
+
+  /* 중첩된 리스트의 들여쓰기 정렬 */
+  ul ul,
+  ol ol,
+  ul ol,
+  ol ul {
+    padding-left: 1.5em;
   }
 
   .x\:container {
